# algorithms_and_data_structures

./: pyproject.toml
src/: 2_selection_sort.py  4_1_devide_and_conquer.py  4_2_quick_sort.py
src/grokking_algorithms/: 1_binary_search.py  3_recursion.py  4_2_quick_sort.py  6_graphs_BFS.py  7_dijkstra_algorithm.py  8_greedy_algorithms.py
